--- a/less/home-page.less
+++ b/less/home-page.less
@@ -93,6 +93,10 @@
     img {
       border-radius: 10px;
     }
+
+    @media @mobile {
+      width: 90%;
+    }
   }
 
   .content-pick {
@@ -114,5 +118,21 @@
     .btn {
       .styleButton(@main-bg, @button-bg);
     }
+
+    @media @mobile {
+      // background-color: red;
+      flex-direction: column;
+      align-items: center;
+
+      .destination {
+        width: auto;
+        max-width: 75%;
+      }
+
+      .btn {
+        width: 100%;
+      }
+    }//@media
+
   }
 }// home
